fix(News): adjust white space in the news section.

--- a/bema-clinicals/src/components/card/Card.module.css
+++ b/bema-clinicals/src/components/card/Card.module.css
@@ -1,7 +1,7 @@
 /*Card styles*/
 
 .card {
-  width: 46rem;
+  width: 50rem;
   height: 47rem;
   text-align: center;
   padding: 5rem;
