--- a/bema-clinicals/src/containers/news/News.module.css
+++ b/bema-clinicals/src/containers/news/News.module.css
@@ -6,7 +6,8 @@
 .news__image {
   width: 100%;
   height: 79.5rem;
-  margin-top: 5.9rem;
+
+  padding: 5.3rem;
 
   background-image: url("../../../public/assets/images/news-img.png");
   background-position: center;
